--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon -L ./api/index.js",
     "setup-db": "node ./api/database/setup.js",
     "start": "node ./api/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
