--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "pg": "^8.11.1",
-    "supertest": "^6.3.3",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "jest": "^29.6.0",
+    "jsdom": "^22.1.0",
+    "live-server": "^1.2.2",
+    "supertest": "^6.3.3"
   }
 }
