--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon -L ./api/index.js",
     "setup-db": "node ./api/database/setup.js",
     "start": "node ./api/index.js",
-    "test": "npx jest --silent=false --detectOpenHandles"
+    "test": "npx jest --watchAll --silent=false --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -27,5 +27,10 @@
     "jsdom": "^22.1.0",
     "live-server": "^1.2.2",
     "supertest": "^6.3.3"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "./__tests__/helpers.js"
+    ]
   }
 }
