--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jest": "^29.6.0",
     "nodemon": "^2.0.22",
     "pg": "^8.11.1",
+    "supertest": "^6.3.3",
     "uuid": "^9.0.0"
   }
 }
