address zone testing

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "jest": {
     "testPathIgnorePatterns": [
-      "./__tests__/helpers.js"
+      "./__tests__/helpers.js",
+      "./__tests__/client.spec.js"
     ]
   }
 }
