--- a/package.json
+++ b/package.json
@@ -7,26 +7,21 @@
     "dev": "nodemon -L ./api/index.js",
     "setup-db": "node ./api/database/setup.js",
     "start": "node ./api/index.js",
-    "test": "npx jest --watchAll --silent=false --detectOpenHandles"
+    "test": "npx jest --silent=false --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jest": "^29.6.0",
     "nodemon": "^2.0.22",
     "pg": "^8.11.1",
+    "supertest": "^6.3.3",
     "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "jest": "^29.6.0",
-    "jsdom": "^22.1.0",
-    "live-server": "^1.2.2",
-    "supertest": "^6.3.3"
   },
   "jest": {
     "testPathIgnorePatterns": [
